Add various pypi/cargo links

--- a/mingw-w64-asm-lsp/PKGBUILD
+++ b/mingw-w64-asm-lsp/PKGBUILD
@@ -10,6 +10,7 @@ arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: asm-lsp'
+  'purl: pkg:cargo/asm-lsp'
 )
 msys2_repository_url='https://github.com/bergercookie/asm-lsp'
 url='https://crates.io/crates/asm-lsp'
