--- a/mingw-w64-blake3/PKGBUILD
+++ b/mingw-w64-blake3/PKGBUILD
@@ -16,6 +16,7 @@ msys2_reference=(
   'archlinux: b3sum'
   'aur: libblake3'
   'gentoo: dev-libs/blake3'
+  'purl: pkg:cargo/b3sum'
 )
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cc"
