--- a/mingw-w64-cargo-generate/PKGBUILD
+++ b/mingw-w64-cargo-generate/PKGBUILD
@@ -11,6 +11,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/cargo-generate/cargo-generate"
 msys2_references=(
   'archlinux: cargo-generate'
+  'purl: pkg:cargo/cargo-generate'
 )
 license=('spdx:MIT OR Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-libgit2" "${MINGW_PACKAGE_PREFIX}-libssh2")
