--- a/mingw-w64-cargo-leptos/PKGBUILD
+++ b/mingw-w64-cargo-leptos/PKGBUILD
@@ -13,6 +13,7 @@ url='https://leptos.dev/'
 msys2_repository_url='https://github.com/leptos-rs/cargo-leptos'
 msys2_references=(
   'archlinux: cargo-leptos'
+  'purl: pkg:cargo/cargo-leptos'
 )
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-binaryen"
