--- a/mingw-w64-eza/PKGBUILD
+++ b/mingw-w64-eza/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64' 'mingw64')
 url='https://eza.rocks'
 msys2_repository_url='https://github.com/eza-community/eza'
+msys2_references=(
+  'purl: pkg:cargo/eza'
+)
 license=('spdx:EUPL-1.2')
 depends=("${MINGW_PACKAGE_PREFIX}-zlib"
          "${MINGW_PACKAGE_PREFIX}-libgit2")
