--- a/mingw-w64-fd/PKGBUILD
+++ b/mingw-w64-fd/PKGBUILD
@@ -13,6 +13,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 license=('spdx:Apache-2.0 OR MIT')
 msys2_references=(
   'archlinux: fd'
+  'purl: pkg:cargo/fd-find'
 )
 source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha512sums=('db7a41d0dd448d73a88f7920b0d67d5d99864fef0a7d64a91523a55af9fd745e6520df8aee808f4131a07acd34730571d94a20e1e6aa1336c6f3caaab593d4ab')
