--- a/mingw-w64-gitoxide/PKGBUILD
+++ b/mingw-w64-gitoxide/PKGBUILD
@@ -12,6 +12,7 @@ url="https://github.com/GitoxideLabs/gitoxide"
 license=('spdx:Apache-2.0 OR MIT')
 msys2_references=(
   'archlinux: gitoxide'
+  'purl: pkg:cargo/gitoxide'
 )
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" 'git')
 source=("git+${url}.git#tag=v${pkgver}")
