--- a/mingw-w64-hayagriva/PKGBUILD
+++ b/mingw-w64-hayagriva/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Format references and citations for your YAML-encoded or BibLaTeX bibli
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/typst/hayagriva"
+msys2_references=(
+  'purl: pkg:cargo/hayagriva'
+)
 license=('spdx:Apache-2.0 OR MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 checkdepends=('git')
