--- a/mingw-w64-just/PKGBUILD
+++ b/mingw-w64-just/PKGBUILD
@@ -11,6 +11,9 @@ mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://just.systems'
 msys2_repository_url='https://github.com/casey/just'
 msys2_documentation_url='https://just.systems/man/en'
+msys2_references=(
+  'purl: pkg:cargo/just'
+)
 license=('spdx:CC0-1.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" 'git')
 options=('!lto')
