--- a/mingw-w64-libdovi/PKGBUILD
+++ b/mingw-w64-libdovi/PKGBUILD
@@ -13,6 +13,7 @@ url='https://github.com/quietvoid/dovi_tool/tree/main/dolby_vision'
 license=('spdx:MIT')
 msys2_references=(
   'archlinux: libdovi'
+  'purl: pkg:cargo/dolby_vision'
 )
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cargo-c")
