--- a/mingw-w64-libimagequant/PKGBUILD
+++ b/mingw-w64-libimagequant/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Palette quantization library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/ImageOptim/libimagequant'
+msys2_references=(
+  'purl: pkg:cargo/imagequant'
+)
 license=('spdx:GPL-3.0-or-later' OR 'custom')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cargo-c")
