--- a/mingw-w64-librsvg/PKGBUILD
+++ b/mingw-w64-librsvg/PKGBUILD
@@ -12,6 +12,7 @@ mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://wiki.gnome.org/Projects/LibRsvg"
 msys2_references=(
   "cpe: cpe:/a:gnome:librsvg"
+  "purl: pkg:cargo/librsvg"
 )
 license=("spdx:LGPL-2.1-or-later")
 makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
