--- a/mingw-w64-neocmakelsp/PKGBUILD
+++ b/mingw-w64-neocmakelsp/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/Decodetalkers/neocmakelsp/'
 url='https://neocmakelsp.github.io/'
+msys2_references=(
+  'purl: pkg:cargo/neocmakelsp'
+)
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-meson"
