--- a/mingw-w64-paper-terminal/PKGBUILD
+++ b/mingw-w64-paper-terminal/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Print Markdown to a paper in your terminal (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64' 'mingw64')
 url='https://github.com/foxfriends/paper-terminal'
+msys2_references=(
+  'purl: pkg:cargo/paper-terminal'
+)
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 options=('!strip' '!lto')
 source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
