--- a/mingw-w64-powersession-rs/PKGBUILD
+++ b/mingw-w64-powersession-rs/PKGBUILD
@@ -7,6 +7,9 @@ pkgdesc="Asciinema-compatible terminal session recorder for Windows (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64')
 url='https://github.com/Watfaq/PowerSession-rs'
+msys2_references=(
+  'purl: pkg:cargo/PowerSession'
+)
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              'git')
