--- a/mingw-w64-pyinstaller/PKGBUILD
+++ b/mingw-w64-pyinstaller/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://pyinstaller.org/'
 msys2_repository_url='https://github.com/pyinstaller/pyinstaller'
+msys2_references=(
+  'pypi: pyinstaller'
+)
 license=('custom')
 depends=("${MINGW_PACKAGE_PREFIX}-binutils"
          "${MINGW_PACKAGE_PREFIX}-pyinstaller-hooks-contrib"
