--- a/mingw-w64-python-aafigure/PKGBUILD
+++ b/mingw-w64-python-aafigure/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="ASCII art to image converte (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/aafigure/aafigure'
+msys2_references=(
+  'pypi: aafigure'
+)
 license=('BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-pillow"
