--- a/mingw-w64-python-altgraph/PKGBUILD
+++ b/mingw-w64-python-altgraph/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://altgraph.readthedocs.io/'
 msys2_repository_url='https://github.com/ronaldoussoren/altgraph'
+msys2_references=(
+  'pypi: altgraph'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-setuptools")
