--- a/mingw-w64-python-archinfo/PKGBUILD
+++ b/mingw-w64-python-archinfo/PKGBUILD
@@ -7,6 +7,9 @@ pkgdesc="Classes with architecture-specific information useful to other projects
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/angr/archinfo"
+msys2_references=(
+  'pypi: archinfo'
+)
 license=('BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
