--- a/mingw-w64-python-celery/PKGBUILD
+++ b/mingw-w64-python-celery/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://docs.celeryq.dev/'
 msys2_repository_url='https://github.com/celery/celery'
+msys2_references=(
+  'pypi: celery'
+)
 license=('BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-billiard"
