--- a/mingw-w64-python-click-didyoumean/PKGBUILD
+++ b/mingw-w64-python-click-didyoumean/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc='Enable git-like did-you-mean feature in click (mingw-w64)'
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/click-contrib/click-didyoumean'
+msys2_references=(
+  'pypi: click-didyoumean'
+)
 license=("MIT")
 depends=("${MINGW_PACKAGE_PREFIX}-python-click")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
