--- a/mingw-w64-python-entrypoints/PKGBUILD
+++ b/mingw-w64-python-entrypoints/PKGBUILD
@@ -10,6 +10,9 @@ pkgver=0.4
 pkgrel=5
 pkgdesc="Discover and load entry points from installed packages (mingw-w64)"
 url="https://github.com/takluyver/entrypoints"
+msys2_references=(
+  'pypi: entrypoints'
+)
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('MIT')
