--- a/mingw-w64-python-pyaml/PKGBUILD
+++ b/mingw-w64-python-pyaml/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="PyYAML-based mdule to produce pretty and readble YAML-serialized data (
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://pypi.python.org/pypi/pyaml'
+msys2_references=(
+  'pypi: pyaml'
+)
 license=('WTFPL')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-yaml")
