--- a/mingw-w64-python-pygccxml/PKGBUILD
+++ b/mingw-w64-python-pygccxml/PKGBUILD
@@ -10,6 +10,9 @@ pkgdesc="Simple framework to navigate C++ declarations, using Python classes. (m
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/gccxml/pygccxml'
+msys2_references=(
+  'pypi: pygccxml'
+)
 license=(Boost)
 depends=("${MINGW_PACKAGE_PREFIX}-python"
 	     "${MINGW_PACKAGE_PREFIX}-castxml")
