--- a/mingw-w64-python-spin/PKGBUILD
+++ b/mingw-w64-python-spin/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Developer tool for scientific Python libraries (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/scientific-python/spin'
+msys2_references=(
+  'pypi: spin'
+)
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-click"
