--- a/mingw-w64-python-trio-websocket/PKGBUILD
+++ b/mingw-w64-python-trio-websocket/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="WebSocket client and server implementation for Python Trio (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/python-trio/trio-websocket/'
+msys2_references=(
+  'pypi: trio-websocket'
+)
 license=('spdx:MIT')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
