--- a/mingw-w64-python-types-python-dateutil/PKGBUILD
+++ b/mingw-w64-python-types-python-dateutil/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Typing stubs for python-dateutil. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/python/typeshed'
+msys2_references=(
+  'pypi: types-python-dateutil'
+)
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
