--- a/mingw-w64-rust-bindgen/PKGBUILD
+++ b/mingw-w64-rust-bindgen/PKGBUILD
@@ -12,6 +12,7 @@ url='https://rust-lang.github.io/rust-bindgen/'
 msys2_repository_url='https://github.com/rust-lang/rust-bindgen'
 msys2_references=(
   'archlinux: rust-bindgen'
+  'purl: pkg:cargo/bindgen'
 )
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-clang" "${MINGW_PACKAGE_PREFIX}-gcc-libs")
