--- a/mingw-w64-trunk/PKGBUILD
+++ b/mingw-w64-trunk/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://trunkrs.dev/'
 msys2_repository_url='https://github.com/trunk-rs/trunk'
+msys2_references=(
+  'purl: pkg:cargo/trunk'
+)
 license=('spdx:MIT OR Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-rust-wasm")
