--- a/mingw-w64-wasm-bindgen/PKGBUILD
+++ b/mingw-w64-wasm-bindgen/PKGBUILD
@@ -10,6 +10,9 @@ pkgdesc="Facilitating high-level interactions between Wasm modules and JavaScrip
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/rustwasm/wasm-bindgen'
+msys2_references=(
+  'purl: pkg:cargo/wasm-bindgen'
+)
 license=('spdx:Apache-2.0 OR MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-rust-wasm"
          "${MINGW_PACKAGE_PREFIX}-nodejs")
