--- a/mingw-w64-wasm-component-ld/PKGBUILD
+++ b/mingw-w64-wasm-component-ld/PKGBUILD
@@ -11,6 +11,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/bytecodealliance/wasm-component-ld"
 msys2_references=(
   'archlinux: wasm-component-ld'
+  'purl: pkg:cargo/wasm-component-ld'
 )
 license=('spdx:Apache-2.0 WITH LLVM-exception AND Apache-2.0 AND MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-lld")
