--- a/mingw-w64-wasmer/PKGBUILD
+++ b/mingw-w64-wasmer/PKGBUILD
@@ -10,6 +10,9 @@ pkgdesc="The leading Wasm Runtime supporting WASIX, WASI and Emscripten (mingw-w
 arch=('any')
 mingw_arch=('ucrt64' 'clang64')
 url="https://github.com/wasmerio/wasmer"
+msys2_references=(
+  'purl: pkg:cargo/wasmer'
+)
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cmake"
