--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -12,6 +12,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://wasmtime.dev'
 msys2_repository_url='https://github.com/bytecodealliance/wasmtime'
+msys2_references=(
+  'purl: pkg:cargo/wasmtime'
+)
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
