--- a/mingw-w64-zoxide/PKGBUILD
+++ b/mingw-w64-zoxide/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="A smarter cd command (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/ajeetdsouza/zoxide'
+msys2_references=(
+  'purl: pkg:cargo/zoxide'
+)
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 checkdepends=('fish' 'zsh')
