--- a/mingw-w64-cargo-about/PKGBUILD
+++ b/mingw-w64-cargo-about/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Cargo plugin to generate list of all licenses for a crate (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/EmbarkStudios/cargo-about'
+msys2_references=(
+  'purl: pkg:cargo/cargo-about'
+)
 license=('spdx:Apache-2.0 OR MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-pkgconf")
