--- a/mingw-w64-cbindgen/PKGBUILD
+++ b/mingw-w64-cbindgen/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="A project for generating C bindings from Rust code (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/mozilla/cbindgen'
+msys2_references=(
+  'purl: pkg:cargo/cbindgen'
+)
 license=('spdx:MPL-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-cmake"
