--- a/mingw-w64-leptosfmt/PKGBUILD
+++ b/mingw-w64-leptosfmt/PKGBUILD
@@ -11,6 +11,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://crates.io/crates/leptosfmt/'
 msys2_repository_url='https://github.com/bram209/leptosfmt'
+msys2_references=(
+  'purl: pkg:cargo/leptosfmt'
+)
 license=('spdx:MIT OR Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 source=("$msys2_repository_url/archive/$pkgver/$_realname-$pkgver.tar.gz"
