--- a/mingw-w64-libmad/PKGBUILD
+++ b/mingw-w64-libmad/PKGBUILD
@@ -10,6 +10,9 @@ pkgdesc="A high-quality MPEG audio decoder (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.underbit.com/products/mad/"
+msys2_references=(
+  'cpe: cpe:2.3:a:underbit:libmad'
+)
 license=('GPL')
 depends=()
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
