--- a/mingw-w64-mdbook/PKGBUILD
+++ b/mingw-w64-mdbook/PKGBUILD
@@ -13,6 +13,7 @@ url="https://github.com/rust-lang/mdBook"
 msys2_references=(
   'archlinux: mdbook'
   "cpe: cpe:/a:rust-lang:mdbook"
+  'purl: pkg:cargo/mdbook'
 )
 license=('spdx:MPL-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
