--- a/mingw-w64-procs/PKGBUILD
+++ b/mingw-w64-procs/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="A modern replacement for ps written in Rust (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/dalance/procs'
+msys2_references=(
+  'purl: pkg:cargo/procs'
+)
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-asciidoctor")
 options=('!lto')
