--- a/mingw-w64-pygobject/PKGBUILD
+++ b/mingw-w64-pygobject/PKGBUILD
@@ -10,6 +10,9 @@ arch=(any)
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://pygobject.gnome.org/"
 msys2_repository_url="https://gitlab.gnome.org/GNOME/pygobject"
+msys2_references=(
+  'pypi: pygobject'
+)
 license=('LGPL')
 depends=("${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-python-cairo"
