--- a/mingw-w64-python-asyncssh/PKGBUILD
+++ b/mingw-w64-python-asyncssh/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://asyncssh.readthedocs.io/'
 msys2_repository_url='https://github.com/ronf/asyncssh'
+msys2_references=(
+  'pypi: asyncssh'
+)
 license=('spdx:EPL-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-cryptography"
