--- a/mingw-w64-python-click-repl/PKGBUILD
+++ b/mingw-w64-python-click-repl/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc='Subcommand REPL for click apps (mingw-w64)'
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/click-contrib/click-repl'
+msys2_references=(
+  'pypi: click-repl'
+)
 license=("MIT")
 depends=("${MINGW_PACKAGE_PREFIX}-python-click"
          "${MINGW_PACKAGE_PREFIX}-python-prompt_toolkit")
