--- a/mingw-w64-python-emoji/PKGBUILD
+++ b/mingw-w64-python-emoji/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Emoji for Python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/carpedm20/emoji'
+msys2_references=(
+  'pypi: emoji'
+)
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
