--- a/mingw-w64-python-flit-core/PKGBUILD
+++ b/mingw-w64-python-flit-core/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc='Simplified packaging of Python modules (core backend) (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 msys2_repository_url='https://github.com/pypa/flit/'
+msys2_references=(
+  'pypi: flit-core'
+)
 url='https://flit.pypa.io/'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
