--- a/mingw-w64-python-flit/PKGBUILD
+++ b/mingw-w64-python-flit/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc='Simplified packaging of Python modules (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/pypa/flit/'
+msys2_references=(
+  'pypi: flit'
+)
 url='https://flit.pypa.io/'
 license=('spdx:BSD-3-Clause')
 depends=(
