--- a/mingw-w64-python-igraph/PKGBUILD
+++ b/mingw-w64-python-igraph/PKGBUILD
@@ -7,6 +7,9 @@ pkgdesc="Python interface to the igraph high performance graph library, primaril
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://pypi.org/project/igraph/'
+msys2_references=(
+  'pypi: igraph'
+)
 license=('spdx:GPL-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python" "${MINGW_PACKAGE_PREFIX}-python-texttable" "$MINGW_PACKAGE_PREFIX-igraph")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build" "${MINGW_PACKAGE_PREFIX}-python-installer" 
