--- a/mingw-w64-python-ipython_genutils/PKGBUILD
+++ b/mingw-w64-python-ipython_genutils/PKGBUILD
@@ -10,6 +10,9 @@ pkgver=0.2.0
 pkgrel=5
 pkgdesc="IPython vestigial utilities (mingw-w64)"
 url="https://github.com/ipython/ipython_genutils"
+msys2_references=(
+  'pypi: ipython_genutils'
+)
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('Modified BSD')
