--- a/mingw-w64-python-pyuca/PKGBUILD
+++ b/mingw-w64-python-pyuca/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc='Python implementation of the Unicode Collation Algorithm (UCA) (mingw-w
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/jtauber/pyuca'
+msys2_references=(
+  'pypi: pyuca'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
