--- a/mingw-w64-python-superqt/PKGBUILD
+++ b/mingw-w64-python-superqt/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://pyapp-kit.github.io/superqt/'
 msys2_repository_url='https://github.com/pyapp-kit/superqt'
+msys2_references=(
+  'pypi: superqt'
+)
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-pygments"
