--- a/mingw-w64-python-texttable/PKGBUILD
+++ b/mingw-w64-python-texttable/PKGBUILD
@@ -7,6 +7,9 @@ pkgdesc="Python module to create simple ASCII tables (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://pypi.org/project/texttable/'
+msys2_references=(
+  'pypi: texttable'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build" "${MINGW_PACKAGE_PREFIX}-python-installer" 
