--- a/mingw-w64-python-zombie-imp/PKGBUILD
+++ b/mingw-w64-python-zombie-imp/PKGBUILD
@@ -7,6 +7,9 @@ pkgdesc="A copy of the imp module that was removed in Python 3.12 (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/encukou/zombie-imp'
+msys2_references=(
+  'pypi: zombie-imp'
+)
 license=('spdx:PSF-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
