--- a/mingw-w64-uutils-coreutils/PKGBUILD
+++ b/mingw-w64-uutils-coreutils/PKGBUILD
@@ -11,6 +11,7 @@ mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/uutils/coreutils'
 msys2_references=(
   'archlinux: uutils-coreutils'
+  'purl: pkg:cargo/coreutils'
 )
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-oniguruma")
