--- a/mingw-w64-uv/PKGBUILD
+++ b/mingw-w64-uv/PKGBUILD
@@ -13,6 +13,7 @@ url="https://github.com/astral-sh/uv"
 license=('spdx:Apache-2.0 OR MIT')
 msys2_references=(
   'archlinux: uv'
+  'pypi: uv'
 )
 depends=("${MINGW_PACKAGE_PREFIX}-bzip2"
          "${MINGW_PACKAGE_PREFIX}-zstd")
