--- a/mingw-w64-octave/PKGBUILD
+++ b/mingw-w64-octave/PKGBUILD
@@ -43,7 +43,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-readline"
          "${MINGW_PACKAGE_PREFIX}-suitesparse"
          "${MINGW_PACKAGE_PREFIX}-sundials"
-         "${MINGW_PACKAGE_PREFIX}-texinfo"
+         "texinfo"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-cc"
@@ -63,12 +63,14 @@ optdepends=("unzip: for decompressing .zip archives"
             "${MINGW_PACKAGE_PREFIX}-portaudio: audio support")
 source=(https://ftp.gnu.org/gnu/octave/octave-$pkgver.tar.xz{,.sig}
         "0002-mk-doc-cache-path.patch"
-        "0003-no-community-support.patch")
+        "0003-no-community-support.patch"
+        "0005-makeinfo-perl.patch")
 validpgpkeys=('DBD9C84E39FE1AAE99F04446B05F05B75D36644B')  # John W. Eaton
 sha256sums=('712468513db7e13b76f28c4b82cdba7d6f3f634c836ddb27a7a8fe9d708145f3'
             'SKIP'
             'aa5bd559d9774abc0f0c930a606762d1e452cc90278d16d8ae83561c0cae3bf8'
-            'e53af21ad087e10a2906506589aab89ab8b43f4e3e4994b4c28e4d8ae83639ad')
+            'e53af21ad087e10a2906506589aab89ab8b43f4e3e4994b4c28e4d8ae83639ad'
+            '2df9666d75bb8dd4f549ec857c75aa3ec64b21fd3c9aa25a0d4127b284ec6822')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -82,7 +84,8 @@ prepare() {
   cd "${_realname}-${pkgver}"
 
   apply_patch_with_msg \
-    0002-mk-doc-cache-path.patch
+    0002-mk-doc-cache-path.patch \
+    0005-makeinfo-perl.patch
 
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
     apply_patch_with_msg \
