vlc: backport build fixes with newer mingw-w64

--- a/mingw-w64-vlc/PKGBUILD
+++ b/mingw-w64-vlc/PKGBUILD
@@ -8,7 +8,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
 replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
 pkgver=3.0.21
-pkgrel=6
+pkgrel=7
 pkgdesc="A multi-platform MPEG, VCD/DVD, and DivX player (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -113,7 +113,8 @@ source=(https://get.videolan.org/${_realname}/${pkgver}/${_realname}-${pkgver}.t
         0030-taglib-arch-fixes.patch
         0031-Taglib-Use-ID3v2Tag-instead-of-tag-for-RIFF-WAV-File.patch
         5574.patch
-        0100-more-ffmpeg7-fixes.patch)
+        0100-more-ffmpeg7-fixes.patch
+        https://code.videolan.org/videolan/vlc/-/commit/720c55a08c1f4fe18114040bf9bc7fde32eb12c2.patch)
 sha256sums=('24dbbe1d7dfaeea0994d5def0bbde200177347136dbfe573f5b6a4cee25afbb0'
             '130cdf7655deca92fd28dd177cd99aab24113bd1052700896046b66acbcb1f2d'
             '8f40d57bb087306e5099c5b9067dacca0479c4dc9e45eb902ad04eeb3fb83ef3'
@@ -128,7 +129,8 @@ sha256sums=('24dbbe1d7dfaeea0994d5def0bbde200177347136dbfe573f5b6a4cee25afbb0'
             '8830b5ee3a3ea25c2931b49a7cb913517e710cbe6c2b51d61d14df31344eb694'
             '1d430b646fec3b516aa53c7f3ce3b0873baf707cf814ddee843f1794d76b102a'
             '5442798322e60b66eda69dab25a2179a43bee8a6d87f61bb7c5e96072d945ad7'
-            '4ba10fb9ecfb3b421d41efedb2844d681252d6a0dc4d86f867dd3bff57fade80')
+            '4ba10fb9ecfb3b421d41efedb2844d681252d6a0dc4d86f867dd3bff57fade80'
+            '46bbb54dfdd0ce81627d09889244fc7917ebc9ddf5be3d5fed2c80be3f3db787')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -165,6 +167,10 @@ prepare() {
   apply_patch_with_msg \
     5574.patch \
     0100-more-ffmpeg7-fixes.patch
+
+  # https://code.videolan.org/videolan/vlc/-/commit/720c55a08c1f4fe18114040bf9bc7fde32eb12c2
+  apply_patch_with_msg \
+    720c55a08c1f4fe18114040bf9bc7fde32eb12c2.patch
 
   ./bootstrap
 }
