Add some ruby gem PURLs

--- a/mingw-w64-asciidoctor/PKGBUILD
+++ b/mingw-w64-asciidoctor/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/asciidoctor/asciidoctor'
 url='https://asciidoctor.org/'
+msys2_references=(
+  'purl: pkg:gem/asciidoctor'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
