--- a/mingw-w64-ruby-dbus/PKGBUILD
+++ b/mingw-w64-ruby-dbus/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Ruby module for interaction with D-Bus (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/mvidner/ruby-dbus"
+msys2_references=(
+  'purl: pkg:gem/ruby-dbus'
+)
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 source=(https://rubygems.org/downloads/${_realname}-${pkgver}.gem)
