--- a/mingw-w64-ruby-mustache/PKGBUILD
+++ b/mingw-w64-ruby-mustache/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://mustache.github.io/'
 msys2_repository_url='https://github.com/mustache/mustache'
+msys2_references=(
+  'purl: pkg:gem/mustache'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 source=(https://rubygems.org/downloads/${_realname}-${pkgver}.gem)
