--- a/mingw-w64-ruby-rdiscount/PKGBUILD
+++ b/mingw-w64-ruby-rdiscount/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='http://dafoster.net/projects/rdiscount/'
 msys2_repository_url='https://github.com/davidfstr/rdiscount'
+msys2_references=(
+  'purl: pkg:gem/rdiscount'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
