--- a/mingw-w64-ruby-native-package-installer/PKGBUILD
+++ b/mingw-w64-ruby-native-package-installer/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="A helper to install native packages on gem install (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/ruby-gnome2/native-package-installer"
+msys2_references=(
+  'purl: pkg:gem/native-package-installer'
+)
 license=('spdx:LGPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 source=("https://rubygems.org/downloads/${_realname}-${pkgver}.gem")
