--- a/mingw-w64-ruby-pkg-config/PKGBUILD
+++ b/mingw-w64-ruby-pkg-config/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Implementation of pkg-config in ruby (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/ruby-gnome2/pkg-config"
+msys2_references=(
+  'purl: pkg:gem/pkg-config'
+)
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 source=(https://rubygems.org/downloads/${_realname}-${pkgver}.gem)
