--- a/mingw-w64-ruby-rake-compiler/PKGBUILD
+++ b/mingw-w64-ruby-rake-compiler/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Rake-based Ruby Extension (C, Java) task generator (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/rake-compiler/rake-compiler'
+msys2_references=(
+  'purl: pkg:gem/rake-compiler'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
 source=(https://rubygems.org/downloads/${_realname}-${pkgver}.gem)
