some more CPEs/PURLs

--- a/mingw-w64-cargo-local-registry/PKGBUILD
+++ b/mingw-w64-cargo-local-registry/PKGBUILD
@@ -11,6 +11,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/dhovart/cargo-local-registry"
 msys2_references=(
   'aur: cargo-local-registry'
+  'purl: pkg:cargo/cargo-local-registry'
 )
 license=('spdx:MIT OR Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-zlib" "${MINGW_PACKAGE_PREFIX}-libssh2")
