--- a/mingw-w64-cargo-tauri/PKGBUILD
+++ b/mingw-w64-cargo-tauri/PKGBUILD
@@ -13,6 +13,7 @@ url='https://tauri.app/'
 msys2_repository_url='https://github.com/tauri-apps/tauri'
 msys2_references=(
   'archlinux: cargo-tauri'
+  'purl: pkg:cargo/tauri'
 )
 license=('spdx:MIT OR Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
