--- a/mingw-w64-lzo2/PKGBUILD
+++ b/mingw-w64-lzo2/PKGBUILD
@@ -10,6 +10,7 @@ arch=(any)
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: lzo'
+  'cpe: cpe:2.3:a:lzo_project:lzo'
 )
 url="https://www.oberhumer.com/opensource/lzo"
 license=("GPL")
