--- a/mingw-w64-starship/PKGBUILD
+++ b/mingw-w64-starship/PKGBUILD
@@ -13,6 +13,7 @@ msys2_repository_url="https://github.com/starship/starship"
 msys2_references=(
   'archlinux: starship'
   'purl: pkg:cargo/starship'
+  'cpe: cpe:2.3:a:starship:starship'
 )
 license=('spdx:ISC')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-cmake")
