--- a/mingw-w64-cargo-create-tauri-app/PKGBUILD
+++ b/mingw-w64-cargo-create-tauri-app/PKGBUILD
@@ -10,6 +10,9 @@ pkgdesc="Rapidly scaffold out a new tauri app project (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/tauri-apps/create-tauri-app"
+msys2_references=(
+  'purl: pkg:cargo/create-tauri-app'
+)
 license=('spdx:MIT OR Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 source=("${url}/archive/${_basename}-v${pkgver}/${_basename}-${_basename}-v${pkgver}.tar.gz")
