--- a/mingw-w64-zydis/PKGBUILD
+++ b/mingw-w64-zydis/PKGBUILD
@@ -10,6 +10,9 @@ pkgdesc="Fast and lightweight x86/x86-64 disassembler and code generation librar
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/zyantific/zydis"
+msys2_references=(
+  'cpe: cpe:2.3:a:zyantific:zydis'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-zycore-c")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
