texstudio: update to 4.8.5

--- a/mingw-w64-texstudio/PKGBUILD
+++ b/mingw-w64-texstudio/PKGBUILD
@@ -3,44 +3,54 @@
 _realname=texstudio
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=4.8.4
+pkgver=4.8.5
 pkgrel=1
 pkgdesc="Integrated writing environment for creating LaTeX documents (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="http://texstudio.sourceforge.net/"
 msys2_repository_url='https://github.com/texstudio-org/texstudio'
 license=('spdx:GPL-3.0-or-later')
-depends=("${MINGW_PACKAGE_PREFIX}-poppler-qt6"
-         "${MINGW_PACKAGE_PREFIX}-quazip-qt6"
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-hunspell"
-         "${MINGW_PACKAGE_PREFIX}-qt6-svg"
+         "${MINGW_PACKAGE_PREFIX}-poppler-qt6"
+         "${MINGW_PACKAGE_PREFIX}-qt6-5compat"
+         "${MINGW_PACKAGE_PREFIX}-qt6-base"
          "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
-         "${MINGW_PACKAGE_PREFIX}-qt6-5compat")
+         "${MINGW_PACKAGE_PREFIX}-qt6-multimedia"
+         "${MINGW_PACKAGE_PREFIX}-qt6-svg"
+         "${MINGW_PACKAGE_PREFIX}-quazip-qt6"
+         "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools")
 optdepends=("${MINGW_PACKAGE_PREFIX}-evince: pdf reader")
-source=("${_realname}-$pkgver.tar.gz::${msys2_repository_url}/archive/${pkgver}.tar.gz"
+source=("${msys2_repository_url}/archive/${pkgver}/${_realname}-$pkgver.tar.gz"
         '0001-install-extra-files-on-mingw.patch'
         '0002-texstudio-4.2.2-fallbackpaths-win32-as-unix.patch'
-        '0003-texstudio-4.2.3-fix-cast-to-smaller-type.patch'
-        '0004-texstudio-4.7.3-win32-unicode.patch')
-sha256sums=('aec719cb21b788a41576375eeeba734600a54ff64130dd93f5d0da1efa37414c'
+        '0003-texstudio-4.2.3-fix-cast-to-smaller-type.patch')
+sha256sums=('e96d6ac05fc70b32ace99dbf515716d5b1f155dff67249afaa7345bc297a0473'
             'b89f798f910e54dc6618edc09ab2834537897b5b18e0590fcb75c3530d4796fb'
             '50695b93a29f9d0078d9a46e281a2366cae36d78d4ebd54e835151041fe7d359'
-            'ee2a685c006f21312700ed9ea8fee5d93f22695540375c69ede13d83a2e03407'
-            '5ffad3d5047c1d169aad727ed709840d8fc77c1bba49aff7ef89605e783dc00c')
+            'ee2a685c006f21312700ed9ea8fee5d93f22695540375c69ede13d83a2e03407')
+
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
+}
 
 prepare() {
     cd ${srcdir}/${_realname}-${pkgver}
 
-    patch -Np1 -i "${srcdir}"/0001-install-extra-files-on-mingw.patch
-    patch -Np1 -i "${srcdir}"/0002-texstudio-4.2.2-fallbackpaths-win32-as-unix.patch
-    patch -Np1 -i "${srcdir}"/0003-texstudio-4.2.3-fix-cast-to-smaller-type.patch
-    patch -Np1 -i "${srcdir}"/0004-texstudio-4.7.3-win32-unicode.patch
+    apply_patch_with_msg \
+      0001-install-extra-files-on-mingw.patch \
+      0002-texstudio-4.2.2-fallbackpaths-win32-as-unix.patch \
+      0003-texstudio-4.2.3-fix-cast-to-smaller-type.patch
 }
 
 build() {
@@ -57,6 +67,7 @@ build() {
     ${MINGW_PREFIX}/bin/cmake.exe -Wno-dev \
         -GNinja \
         -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
+        -DTEXSTUDIO_ENABLE_MEDIAPLAYER=ON \
         "${_extra_config[@]}" \
         ../${_realname}-${pkgver}
 
@@ -68,5 +79,6 @@ package() {
 
     DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-    install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+    install -Dm644 "${srcdir}"/${_realname}-${pkgver}/COPYING \
+      "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
