texstudio: Disable internal crash handler on clangarm64.

--- a/mingw-w64-texstudio/PKGBUILD
+++ b/mingw-w64-texstudio/PKGBUILD
@@ -4,7 +4,7 @@ _realname=texstudio
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=4.8.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Integrated writing environment for creating LaTeX documents (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -61,6 +61,10 @@ build() {
         _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
     else
         _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+    fi
+
+    if [[ ${CARCH} == aarch64 ]]; then
+      _extra_config+=("-DTEXSTUDIO_ENABLE_CRASH_HANDLER=OFF")
     fi
 
     MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
