zed: compile with ld for non-clang environments again seems that #22071 happened again even when thin-lto was fixed in rust compiler. when I tested it, I didn't find any issue though. requires better investigation

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -4,7 +4,7 @@ _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.165.4
-pkgrel=1
+pkgrel=2
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -29,6 +29,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-openssl"
              #"${MINGW_PACKAGE_PREFIX}-sqlite3"
              "${MINGW_PACKAGE_PREFIX}-cargo-about"
+             "${MINGW_PACKAGE_PREFIX}-lld"
              'git')
 options=('!lto')
 optdepends=("${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
@@ -93,6 +94,11 @@ build() {
   export ZED_UPDATE_EXPLANATION='Updates are handled by pacman'
   export CARGO_PROFILE_RELEASE_DEBUG=0
   export RELEASE_VERSION="${pkgver} (Rev${pkgrel}, Built by MSYS2 project)"
+  # keyboard shortcuts are broken when compiled with ld
+  # https://github.com/msys2/MINGW-packages/issues/22071
+  if [[ $MINGW_PACKAGE_PREFIX != *-clang-* ]]; then
+    export RUSTFLAGS+=" -Clink-arg=-fuse-ld=lld"
+  fi
 
   cargo build --release --frozen -p zed
 }
