add openh264 option

--- a/mingw-w64-ffmpeg/PKGBUILD
+++ b/mingw-w64-ffmpeg/PKGBUILD
@@ -61,7 +61,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-aom"
           $([[ "${CARCH}" == "i686" ]] || echo "${MINGW_PACKAGE_PREFIX}-liblc3")
          "${MINGW_PACKAGE_PREFIX}-vid.stab"
          "${MINGW_PACKAGE_PREFIX}-vulkan"
-         "${MINGW_PACKAGE_PREFIX}-libx264"
+          $([[ "${use_openh264}" == true ]] && echo "${MINGW_PACKAGE_PREFIX}-openh264" || echo "${MINGW_PACKAGE_PREFIX}-libx264")
          "${MINGW_PACKAGE_PREFIX}-x265"
          "${MINGW_PACKAGE_PREFIX}-xvidcore"
          "${MINGW_PACKAGE_PREFIX}-zimg"
@@ -153,7 +153,7 @@ build() {
     --enable-libtheora
     --enable-libvidstab
     --enable-libvorbis
-    --enable-libx264
+    $([[ "${use_openh264}" == true ]] && echo --enable-libopenh264 || echo --enable-libx264)
     --enable-libx265
     --enable-libxvid
     --enable-libvpx
