c3c: update to 0.6.5 add patch to install manpage

--- a/mingw-w64-c3c/PKGBUILD
+++ b/mingw-w64-c3c/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=c3c
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.6.3
+pkgver=0.6.5
 pkgrel=1
 pkgdesc="Compiler for the C3 language (mingw-w64)"
 arch=('any')
@@ -21,8 +21,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-llvm"
              "${MINGW_PACKAGE_PREFIX}-lld"
              'git')
-source=("git+${msys2_repository_url}.git#tag=v${pkgver}")
-sha256sums=('c800203eafbbc6b8521fd4e8402b8a7f534879a23a256a2f769da37a237aa2b9')
+source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
+        "install-man.patch")
+sha256sums=('d7c96b8bd2384cfb48e99ae59a5d286446f1a27210d0d54a65a3e7737bd287f7'
+            'c800461ae8d1c6be4bb76018a7aee93b5d980664959195ba85c1195686fa5f4d')
+
+prepare() {
+  git -C c3c apply ../install-man.patch
+}
 
 build() {
   declare -a extra_config
