--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.165.4
-pkgrel=2
+pkgver=0.166.1
+pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -44,7 +44,7 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('b1faf6aaa7166a156bcfd922a8de6831510e97e03e9bcfc9bf6f4dc94d28b2bc'
+sha256sums=('513e62bfd8f0e2762b748082c1e7883f5841c6c3321cae7fe57c0474bcfda0ab'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
@@ -59,11 +59,7 @@ prepare() {
   # link system deps dynamically
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
   # use patched *-sys crates
-  cat >> Cargo.toml <<END
-
-[patch.crates-io]
-zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }
-END
+  sed -i '/\[patch\.crates-io\]/a zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }' Cargo.toml
 
   # change git config so `pet*` crates would be fetched without error. requires Windows registry
   # changes, see
