tfel (mfront): update to 5.0.0

--- a/mingw-w64-tfel/PKGBUILD
+++ b/mingw-w64-tfel/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=tfel
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=4.2.2
+pkgver=5.0.0
 pkgrel=1
 pkgdesc='MFront: a code generation tool dedicated to material knowledge (mingw-w64)'
 arch=('any')
@@ -18,12 +18,26 @@ makedepends=("unzip"
              $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-fortran") )
 license=('spdx:GPL-3.0-or-later')
 url='https://tfel.sourceforge.io/'
-source=(https://github.com/thelfer/${_realname}/archive/TFEL-${pkgver}.zip)
-sha256sums=('2d98b2f578454d0c8970da3a5d8389cd6d8ffc087db3ee824ceb724ac40f25bf')
+source=(https://github.com/thelfer/${_realname}/archive/TFEL-${pkgver}.zip
+        "fix_zmat.patch::https://github.com/thelfer/tfel/commit/3f42cd05b256deeb80e795b9c35f11dca35b7e39.patch")
+sha256sums=('02a0aa6e60e0ae4dd6103171462f394197e3fdb8a96a295c313a8d853966acda'
+            'SKIP')
 noextract=("TFEL-${pkgver}.zip") # bsdtar could not unpack this archive
+
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying $_patch"
+    patch -Np1 -i "${srcdir}/$_patch"
+  done
+}
 
 prepare() {
   unzip -oq TFEL-${pkgver}.zip -d ${srcdir}
+  
+  cd ${_realname}-TFEL-${pkgver}
+  apply_patch_with_msg \
+    fix_zmat.patch
 }
 
 build() {
