--- a/mingw-w64-cgal/PKGBUILD
+++ b/mingw-w64-cgal/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=cgal
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=5.6.1
-pkgrel=2
+pkgver=6.0.1
+pkgrel=1
 pkgdesc="Computational Geometry Algorithms Library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,20 +21,28 @@ depends=("${MINGW_PACKAGE_PREFIX}-boost"
          "${MINGW_PACKAGE_PREFIX}-eigen3"
          "${MINGW_PACKAGE_PREFIX}-gmp"
          "${MINGW_PACKAGE_PREFIX}-mpfr")
-optdepends=("${MINGW_PACKAGE_PREFIX}-qt5-svg: for CGAL_Qt5"
-            "${MINGW_PACKAGE_PREFIX}-qt5-script: for CGAL_Qt5"
+optdepends=("${MINGW_PACKAGE_PREFIX}-qt6-svg: for CGAL_Qt6"
+            "${MINGW_PACKAGE_PREFIX}-qt6-script: for CGAL_Qt6"
             "${MINGW_PACKAGE_PREFIX}-tbb: for some packages, see the CGAL manual")
 source=(https://github.com/CGAL/cgal/releases/download/v${pkgver}/CGAL-${pkgver}.tar.xz)
-sha256sums=('cdb15e7ee31e0663589d3107a79988a37b7b1719df3d24f2058545d1bcdd5837')
+sha256sums=('0acdfbf317c556630dd526f3253780f29b6ec9713ee92903e81b5c93c0f59b7f')
 
 build() {
   mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
+
+  declare -a _extra_config
+  if check_option "debug" "n"; then
+    _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
+  else
+    _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
       -G"Ninja" \
       -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
-      -DCMAKE_BUILD_TYPE=Release \
+      "${_extra_config[@]}" \
+      -DCGAL_ENABLE_TESTING=OFF \
       ../CGAL-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
@@ -42,5 +50,10 @@ build() {
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
+
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
+
+  install -Dm644 $srcdir/CGAL-${pkgver}/LICENSE -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
+  install -Dm644 $srcdir/CGAL-${pkgver}/LICENSE.* -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
+  install -Dm644 $srcdir/CGAL-${pkgver}/LICENSES/* -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
 }
