pastix: turn off starpu

--- a/mingw-w64-pastix/PKGBUILD
+++ b/mingw-w64-pastix/PKGBUILD
@@ -4,7 +4,7 @@ _realname=pastix
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=6.4.0
-pkgrel=2
+pkgrel=3
 pkgdesc='High performance parallel solver for very large sparse linear systems based on direct methods (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,7 +15,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-openblas"
          "${MINGW_PACKAGE_PREFIX}-hwloc"
          "${MINGW_PACKAGE_PREFIX}-metis"
          "${MINGW_PACKAGE_PREFIX}-scotch"
-         "${MINGW_PACKAGE_PREFIX}-starpu"
+         #"${MINGW_PACKAGE_PREFIX}-starpu"
          "${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -65,7 +65,7 @@ build() {
       -DPASTIX_INT64=OFF \
       -DCMAKE_BUILD_TYPE=Release \
       -DPASTIX_WITH_PARSEC=OFF \
-      -DPASTIX_WITH_STARPU=ON \
+      -DPASTIX_WITH_STARPU=OFF \
       -DPASTIX_ORDERING_PTSCOTCH=OFF \
       -DPASTIX_ORDERING_SCOTCH=ON \
       -DPASTIX_ORDERING_METIS=ON \
@@ -90,7 +90,7 @@ build() {
       -DPASTIX_INT64=OFF \
       -DCMAKE_BUILD_TYPE=Release \
       -DPASTIX_WITH_PARSEC=OFF \
-      -DPASTIX_WITH_STARPU=ON \
+      -DPASTIX_WITH_STARPU=OFF \
       -DPASTIX_ORDERING_PTSCOTCH=OFF \
       -DPASTIX_ORDERING_SCOTCH=ON \
       -DPASTIX_ORDERING_METIS=ON \
