bzip3: update to 1.5.1

--- a/mingw-w64-bzip3/PKGBUILD
+++ b/mingw-w64-bzip3/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=bzip3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.5.0
+pkgver=1.5.1
 pkgrel=1
 pkgdesc='A better and stronger spiritual successor to BZip2 (mingw-w64)'
 arch=('any')
@@ -14,7 +14,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-libwinpthread")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=(https://github.com/kspalaiologos/bzip3/releases/download/${pkgver}/bzip3-${pkgver}.tar.xz)
-sha256sums=('5f548197cd025a9d40bc3d1dbae96ffbb0833eab4662dc75e5e3de31004fae11')
+sha256sums=('53b844f9d9fb1d75faa4d3a9d9026017caaf50bb200b320d1685c6506b8f3b37')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
@@ -27,6 +27,7 @@ build() {
   cd "${srcdir}/${_realname}-${pkgver}"
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
+  CFLAGS+=" -D_GNU_SOURCE" \
   ../"${_realname}-${pkgver}"/configure \
     --prefix="${MINGW_PREFIX}" \
     --build="${MINGW_CHOST}" \
