--- a/mingw-w64-fox/PKGBUILD
+++ b/mingw-w64-fox/PKGBUILD
@@ -4,10 +4,10 @@ _realname=fox
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.6.57
-pkgrel=4
+pkgrel=5
 pkgdesc="C++ user interface toolkit (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="http://www.fox-toolkit.org"
 license=('LGPLv2+ with exceptions')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
@@ -32,6 +32,8 @@ prepare() {
 build() {
   [[ -d ${srcdir}/build-${MSYSTEM} ]] && rm -rf ${srcdir}/build-${MSYSTEM}
   cp -rf ${_realname}-${pkgver} build-${MSYSTEM} && cd build-${MSYSTEM}
+
+  CPPFLAGS+=" -Wno-register"
 
   ./configure \
     --prefix=${MINGW_PREFIX} \
