python-llvmlite: update to 0.44.0rc2

--- a/mingw-w64-python-llvmlite/PKGBUILD
+++ b/mingw-w64-python-llvmlite/PKGBUILD
@@ -3,11 +3,8 @@
 _realname=llvmlite
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=0.43.0
-pkgrel=3
+pkgver=0.44.0rc2
+pkgrel=1
 pkgdesc='Lightweight LLVM python binding for writing JIT compilers (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -31,7 +28,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "multi-defs.patch"
         "path_fix.patch")
-sha256sums=('ae2b5b5c3ef67354824fb75517c8db5fbe93bc02cd9671f3c62271626bc041d5'
+sha256sums=('7731d125071842c2465ecd9fd59736da7ae70d8c6d04566ede98296e8779a8ed'
             'b4610934ac8fd7e614d9ea920856ff6da2fbeb146028a664ada8543b8b33ec56'
             '813ecc48f18543f0d36b03c7596a1a6a26be31b9cfa44f1111ac232821844a79')
 
@@ -44,7 +41,7 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd "$srcdir/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   apply_patch_with_msg \
     multi-defs.patch \
@@ -54,8 +51,7 @@ prepare() {
 }
 
 build() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
     # A hack to make it build on clang* environments
@@ -65,17 +61,17 @@ build() {
   export CMAKE_GENERATOR="Ninja"
   export LLVM_DIR=${MINGW_PREFIX}/opt/llvm-15/lib/cmake/llvm
 
-  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  local _py3ver=$(${MINGW_PREFIX}/bin/python -c "import sys;sys.stdout.write('.'.join(map(str, sys.version_info[:2])))")
+  local _py3ver=$(python -c "import sys;sys.stdout.write('.'.join(map(str, sys.version_info[:2])))")
   install -Dm644 ffi/build/libllvmlite.dll "${pkgdir}${MINGW_PREFIX}/lib/python${_py3ver}/site-packages/llvmlite/binding/llvmlite.dll"
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
