swi-prolog: update to 9.2.9 (#22855)

--- a/mingw-w64-swi-prolog/PKGBUILD
+++ b/mingw-w64-swi-prolog/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=swi-prolog
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-full" "${MINGW_PACKAGE_PREFIX}-${_realname}-core" "${MINGW_PACKAGE_PREFIX}-${_realname}-packages" "${MINGW_PACKAGE_PREFIX}-${_realname}-archive" "${MINGW_PACKAGE_PREFIX}-${_realname}-bdb" "${MINGW_PACKAGE_PREFIX}-${_realname}-pcre2" "${MINGW_PACKAGE_PREFIX}-${_realname}-yaml" "${MINGW_PACKAGE_PREFIX}-${_realname}-ssl" "${MINGW_PACKAGE_PREFIX}-${_realname}-x" "${MINGW_PACKAGE_PREFIX}-${_realname}-python" "${MINGW_PACKAGE_PREFIX}-${_realname}-doc" "${MINGW_PACKAGE_PREFIX}-${_realname}-examples" "${MINGW_PACKAGE_PREFIX}-${_realname}-tests")
-pkgver=9.2.8
+pkgver=9.2.9
 pkgrel=1
 pkgdesc="Prolog environment (mingw-w64)"
 arch=(any)
@@ -28,15 +28,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-openssl"
              "${MINGW_PACKAGE_PREFIX}-openjpeg2"
              "${MINGW_PACKAGE_PREFIX}-python")
-source=("https://www.swi-prolog.org/download/stable/src/swipl-${pkgver}.tar.gz"
-        "01-mqi-specify-encoding.patch")
-sha256sums=('b331637a57c913c49edcfcb10ddcf6c031278ce93d2411d54542778531abb5c7'
-            'b1e2341590c46d3bcc2e4b7ad85645a91a5979d7aa6ad39e6899c9c3fbdf2f94')
-
-prepare() {
-  cd ${srcdir}/swipl-${pkgver}
-  patch -p1 < ${srcdir}/01-mqi-specify-encoding.patch
-}
+source=("https://www.swi-prolog.org/download/stable/src/swipl-${pkgver}.tar.gz")
+sha256sums=('53f428e2d9bbdf30e53b06c9c42def9a13ff82fc36a111d410fc8b0bc889ee2d')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
