gnome-text-editor: doesn't depend on enchant.

--- a/mingw-w64-gnome-text-editor/PKGBUILD
+++ b/mingw-w64-gnome-text-editor/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gnome-text-editor
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=47.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A simple text editor for the GNOME desktop (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,19 +14,18 @@ msys2_references=(
 )
 license=('spdx:GPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-editorconfig-core-c"
-         "${MINGW_PACKAGE_PREFIX}-enchant"
          "${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-gtk4"
          "${MINGW_PACKAGE_PREFIX}-gtksourceview5"
-         "${MINGW_PACKAGE_PREFIX}-libspelling"
          "${MINGW_PACKAGE_PREFIX}-icu"
-         "${MINGW_PACKAGE_PREFIX}-libadwaita")
+         "${MINGW_PACKAGE_PREFIX}-libadwaita"
+         "${MINGW_PACKAGE_PREFIX}-libspelling")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-gtk-doc"
-             "${MINGW_PACKAGE_PREFIX}-gettext"
+             "${MINGW_PACKAGE_PREFIX}-gettext-tools"
              "${MINGW_PACKAGE_PREFIX}-itstool")
 source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz)
 sha256sums=('7d04039b16174ec5fd65fea2f447f3febd9fdf2aa36e9997abc6ff992cc31e38')
@@ -40,7 +39,6 @@ build() {
     --wrap-mode=nodownload \
     --default-library=both \
     --buildtype=plain \
-    -Denchant=enabled \
     -Dbugreport_url=https://github.com/msys2/MINGW-packages/issues \
     "../${_realname}-${pkgver}"
 
@@ -51,5 +49,6 @@ package() {
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson.exe install
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/COPYING \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 }
