--- a/mingw-w64-calculix-ccx/PKGBUILD
+++ b/mingw-w64-calculix-ccx/PKGBUILD
@@ -20,7 +20,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-arpack"
          $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran"))
 makedepends=("${MINGW_PACKAGE_PREFIX}-fc"
              "${MINGW_PACKAGE_PREFIX}-spooles"
-             "${MINGW_PACKAGE_PREFIX}-pkg-config")
+             "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=("http://www.dhondt.de/ccx_${pkgver}.src.tar.bz2"
         "http://www.dhondt.de/gpl-2.0.txt"
         "ccx_mingw.patch"
