--- a/mingw-w64-python-jmespath/PKGBUILD
+++ b/mingw-w64-python-jmespath/PKGBUILD
@@ -4,7 +4,7 @@ _realname=jmespath
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.0.1
-pkgrel=3
+pkgrel=4
 pkgdesc='A query language for JSON (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,7 +14,10 @@ msys2_references=(
 )
 license=('Apache')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-nose" "${MINGW_PACKAGE_PREFIX}-python-py")
+checkdepends=(
+  "${MINGW_PACKAGE_PREFIX}-python-pytest"
+  "${MINGW_PACKAGE_PREFIX}-python-hypothesis"
+)
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://github.com/jmespath/jmespath.py/archive/$pkgver.tar.gz")
 sha256sums=('6a02470b1716ec7a32abe89a873a4795c41c938468225f8a53d860980ec9e3c6')
@@ -33,7 +36,7 @@ build() {
 
 check() {
   cd "${srcdir}/python-build-${CARCH}"
-  LC_CTYPE=en_US.utf8 ${MINGW_PREFIX}/bin/nosetests || warning "Tests failed"
+  LC_CTYPE=en_US.utf8 python -m pytest || warning "Tests failed"
 }
 
 package() {
