libfilezilla: Fix compiler error with clang

--- a/mingw-w64-libfilezilla/PKGBUILD
+++ b/mingw-w64-libfilezilla/PKGBUILD
@@ -25,14 +25,19 @@ license=('spdx:GPL-2.0-or-later')
 # Upstream download link became (purposely) unstable
 # See https://trac.filezilla-project.org/ticket/13186
 #source=("https://download.filezilla-project.org/${_realname}/${_realname}-${pkgver}.tar.xz")
-source=("https://sources.archlinux.org/other/${_realname}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('79ff30e5124068c116c8dc8fc4581922afa2d3720f7b6bee9c8f8fe419617488')
+source=("https://sources.archlinux.org/other/${_realname}/${_realname}-${pkgver}.tar.xz"
+        "add-specialization-for-char_traits-uint8_t.patch")
+sha256sums=('79ff30e5124068c116c8dc8fc4581922afa2d3720f7b6bee9c8f8fe419617488'
+            '70c778307d1e9cc14c688766cdfe6d6c49b7e0f6a1c33bf8122d1228deb9329b')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
 
   # autoreconf to get updated libtool files with clang support
   autoreconf -fiv
+
+  # https://svn.filezilla-project.org/filezilla/libfilezilla/trunk/lib/libfilezilla/string.hpp?r1=11189&r2=11207
+  patch -p1 -i "${srcdir}"/add-specialization-for-char_traits-uint8_t.patch
 }
 
 build() {
