--- a/mingw-w64-libexcelize/PKGBUILD
+++ b/mingw-w64-libexcelize/PKGBUILD
@@ -14,7 +14,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=(${MINGW_PACKAGE_PREFIX}-cmake
              ${MINGW_PACKAGE_PREFIX}-go
              ${MINGW_PACKAGE_PREFIX}-cc
-             ${MINGW_PACKAGE_PREFIX}-ninja)
+             ${MINGW_PACKAGE_PREFIX}-ninja
+             git)
 options=('!strip')
 source=("https://github.com/qax-os/excelize/archive/refs/tags/v${pkgver}.tar.gz"
         "main.go"
