--- a/mingw-w64-libexcelize/PKGBUILD
+++ b/mingw-w64-libexcelize/PKGBUILD
@@ -25,10 +25,10 @@ sha256sums=('3b0238ac400a7685fd0fc426d7efb7c01e5034c9c82b4a8ed71ebb018601b5f7'
             '8149f0f6d7e2bc42ebe417200875c42c79cab91935c56ed15cc9c14d19eedb89')
 
 prepare() {
-    cd "${srcdir}/${_realname}-${pkgver}"
+    cd "${srcdir}"
     
-    cp -f ${srcdir}/main.go" .
-    cp -f ${srcdir}/types_c.h" .
+    cp -f "${srcdir}/main.go" "${srcdir}/${_realname}-${pkgver}"
+    cp -f "${srcdir}/types_c.h" "${srcdir}/${_realname}-${pkgver}"
 }
 
 build() {
