--- a/mingw-w64-libexcelize/PKGBUILD
+++ b/mingw-w64-libexcelize/PKGBUILD
@@ -50,7 +50,7 @@ build() {
     export CGO_CXXFLAGS="${CXXFLAGS}"
     export CGO_LDFLAGS="${LDFLAGS}"
     export GO_LDFLAGS="-s -w"
-    export GOFLAGS="-trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
+    # export GOFLAGS="-trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
     
     go build -buildmode=c-shared -o libexcelize.dll ${_realname}-${pkgver}/main.go
 }
