--- a/mingw-w64-libexcelize/PKGBUILD
+++ b/mingw-w64-libexcelize/PKGBUILD
@@ -53,12 +53,14 @@ build() {
     export GO_LDFLAGS="-s -w"
     # export GOFLAGS="-trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
     
-    go build -buildmode=c-shared -o libexcelize.dll main.go
+    go build -buildmode=c-archive -o excelize.a main.go
+    go build -buildmode=c-shared -o excelize.dll main.go
 }
 
 package() {
     cd "build-${MINGW_CHOST}"
-    install -Dm755 "libexcelize.dll" "${pkgdir}${MINGW_PREFIX}/bin/libexcelize.dll"
-    install -Dm755 "libexcelize.h" "${pkgdir}${MINGW_PREFIX}/include/libexcelize.h"
+    install -Dm755 "excelize.dll" "${pkgdir}${MINGW_PREFIX}/bin/excelize.dll"
+    install -Dm755 "excelize.a" "${pkgdir}${MINGW_PREFIX}/lib/excelize.a"
     install -Dm755 "excelize.pc" "${pkgdir}${MINGW_PREFIX}/lib/pkgconfig/excelize.pc"
+    install -Dm755 "excelize.h" "${pkgdir}${MINGW_PREFIX}/include/excelize.h"
 }
