mingw-w64: Update to 63f3f28463

--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -4,9 +4,9 @@ _realname=headers
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgdesc="MinGW-w64 headers for Windows (mingw-w64)"
-pkgver=12.0.0.r458.g03d8a40f5
+pkgver=12.0.0.r459.g63f3f2846
 pkgrel=1
-_commit='03d8a40f57649fbb773f1cdbe3a760f5e0943e76'
+_commit='63f3f284635f4a1a09828acd2e6f6bea1eacb0e7'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.mingw-w64.org/"
@@ -21,7 +21,7 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         0001-remove-ireference-boolean.patch)
-sha256sums=('cda9858cf758f752306330f66840631de953f11d0e74836ea3b7892a2743db6f'
+sha256sums=('9744d8767fa49d631c8b411df20bd285e9bce7261850f78d7edf65db1798ac05'
             'cad48616325b5e70afa4e02424021fc8d54e17dcbf86eae3df990d3500080236')
 
 pkgver() {
