--- a/mingw-w64-winstorecompat-git/PKGBUILD
+++ b/mingw-w64-winstorecompat-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=winstorecompat
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r458.g03d8a40f5
+pkgver=12.0.0.r459.g63f3f2846
 pkgrel=1
-_commit='03d8a40f57649fbb773f1cdbe3a760f5e0943e76'
+_commit='63f3f284635f4a1a09828acd2e6f6bea1eacb0e7'
 pkgdesc="MinGW-w64 winRT compat library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('cda9858cf758f752306330f66840631de953f11d0e74836ea3b7892a2743db6f')
+sha256sums=('9744d8767fa49d631c8b411df20bd285e9bce7261850f78d7edf65db1798ac05')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
