--- a/mingw-w64-python-pypng/PKGBUILD
+++ b/mingw-w64-python-pypng/PKGBUILD
@@ -10,7 +10,7 @@ pkgdesc='Pure Python library for PNG image encoding/decoding (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://gitlab.com/drj11/pypng'
-license=('LICENSE')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
